Added DTO module that uses lombok instead of records.