@@ -14,6 +14,7 @@
         <eclipse-collections-api.version>10.4.0</eclipse-collections-api.version>
         <junit.version>5.1.0</junit.version>
         <log4j.version>2.14.0</log4j.version>
+        <lombok.version>1.18.16</lombok.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
         <maven.compiler.source>15</maven.compiler.source>
         <maven.compiler.target>15</maven.compiler.target>
@@ -69,16 +70,18 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
-                    <compilerArgs>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
+                    <source>11</source>
+                    <target>11</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>com.google.auto.service</groupId>
                             <artifactId>auto-service</artifactId>
                             <version>${auto-service.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                            <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
@@ -106,6 +109,7 @@
         <module>entity</module>
         <module>dto</module>
         <module>launcher</module>
+        <module>lombok-dto</module>
         <module>metric</module>
         <module>test-util</module>
         <module>provider</module>
